modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -107,6 +107,7 @@
 		            <li>性别: 男</li>
 		            <li>出生年月: 1986年8月</li>
 		            <li>邮箱: yubiaobin1986@gmail.com</li>
+		            <li>QQ: 14203405</li>
 		            <li>现居住地: 广州</li>
 		            <li>电话: <span class="myPhone">18620109230</span></li>
 		        </ul>
@@ -126,7 +127,7 @@
 		        <ul>
 		        	<li>2014.05——至今,    广州世奥信息技术有限公司,  WEB前端工程师</li>
 		        	<li>2013.03——2014.04, 香港域思集团广州研发中心,  WEB前端工程师</li>
-		        	<li>2012.11——2013.02, 广州市白云区天誉化妆品牧妆人电子商务部, 前端开发</li>
+		        	<li>2012.11——2013.02, 广州市天誉化妆品牧妆人电子商务部, 前端开发</li>
 		        	<li>2011.01——2012.08, 广州市聚芳企业管理有限公司, 设计采购专员</li>
 					<li>2009.06——2010.12, 广州市圣菲之美化妆品集团公司, 设计助理</li>
 		        </ul>
@@ -137,16 +138,13 @@
 		        <h2>做重构，设计出身，像素级还原</h2>
 		        <ul>
 		        	<li>熟练使用PhotoShop切图，像素级重构。</li>
-		            <li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
-		            <li>熟练使用jQuery，Zepto等库或框架</li>
-		           <!--  <li>
-		                <p>熟悉php，mysql等技术，能独立建站。</p>
-		                <p class="itemIntro">作品有: <a href="http://starofwords.com/" target="_blank">http://starofwords.com/</a>，<a href="http://www.f2estar.com/" target="_blank">http://www.f2estar.com/</a>等</p>
-		            </li> -->
+		        	<li>了解业界最新的扁平化设计趋势，响应式设计</li>
 		        </ul>
 		        <h2>写代码，逻辑清晰，代码精简</h2>
 		        	<ul>
 		        		<li>熟练掌握<strong>HTML</strong>以及ECMA5的规范以及HTML5新标签及CSS3样式及动画。</li>
+		        		<li>熟练使用jQuery，Zepto等库或框架</li>
+		            	<li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
 		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
 		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目。</li>
 		        		<li>了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
@@ -165,56 +163,41 @@
 		        <p class="title">项目经验</p>
 		        <ul>
 		        	<li>
-		        		<p><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></p>
-		        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
-		        	</li>
+		            	<p><a href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html" target="_blank">香港Canidae集团官方网站</a></p>
+		        		<p class="itemIntro">简介：客户对设计的美感要求比较高，一再改动易稿，最后在时间非常仓促的情况下顶住压力，快速而准确的重构页面。主要通过html5,css3等技术大进行动作模拟，页面具备很流畅的交互体验。</p>
+		            </li>
+		        	
 		        	<li>
 		        		<p>Android手机应用开发</p>
 		        		<p class="itemIntro">
-		        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用Phonegap+Ratchet+Backbone重构所有前端页面，最终完成该项目。
+		        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用 Phonegap + Ratchet + Backbone重构所有前端页面，最终完成该项目。
 		        		</p>
 		        	</li>
 		            <!-- <li>
 		                <p><a target="_blank" href="http://3g.163.com/ntes/special/00340BF8/hdlb.html">网易新闻客户端活动广场</a></p>
 		                <p class="itemIntro">简介：一个网易新闻客户端native app的内嵌wap页，使用hybrid开发形式，提供一个活动入口页面。主要使用Zepto,html5,css3等技术开发。</p>
 		            </li>
-		            <li>
-		                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/tenIndex.html">新闻大作战</a></p>
-		                <p class="itemIntro">简介：网易新闻客户端的售卖项目。通过网易的互动系统录入题目，前端jsonp调取题目数据渲染，用户答题以后，互动系统则返回一个答题id自动该用户答题分数，前端再将用户信息和分数同时提交至后台，让用户获取金币。形式新颖，可玩性也很较强，最高一天有10万次的答题数量。</p>
-		            </li>
-		            <li>
-		                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/costa/index.html">costa咖啡项目</a></p>
-		                <p class="itemIntro">简介：新闻客户端跟costa咖啡合作的项目，通过wap页模拟泡制咖啡以传递costa咖啡品牌形象。主要通过html5,css3等技术大进行动作模拟，活动有自己的创新性和独特价值。</p>
-		            </li>
-		            <li>
-		                <p><a target="_blank" href="http://lady.163.com/special/ugcvideo/">视频精选项目</a></p>
-		                <p>简介：一个移动wap页，可以拍摄视频，主要通过input:file的形式上传视频，活动中还使用到postMessage技术解决跨域问题。</p>
-		            </li>
-		            <li>
-		                <p><a target="_blank" href="http://tie.163.com/gt/special/xqianggame/">小强历险记</a></p>
-		                <p>简介：跟网易跟贴结合的一个pc项目，主要使用jQuery构建。</p>
-		            </li>
+		            
 		            <li>
 		                <p>pad版支付宝</p>
 		                <p>简介：主要承担html和css编写工作，参与部分开发联调。运用技术主要有：html5，css3，原生js和jQuery。</p>
-		            </li>
-		            <li>
-		                <p>支付宝无线首页改版</p>
-		                <p>简介：负责html,css的重构，部分js功能调试。运用技术主要有：html，css2，原生js。</p>
-		            </li>
-		            <li>
-		                <p>支付宝无线商户签约平台</p>
-		                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
 		            </li> -->
 		            <li>
-		            	<p><a target="_blank" href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html">香港Canidae集团官方网站</a></p>
-		        		<p class="itemIntro">简介：客户对设计的美感要求比较高，一再改动易稿，最后在时间非常仓促的情况下顶住压力，快速而准确的重构页面。主要通过html5,css3等技术大进行动作模拟，页面具备很流畅的交互体验。</p>
+		        		<p><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></p>
+		        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
+		        	</li>
+		            <li>
+		            	<p><a href="http://forester2.vizzhost.com/evolve/catalog/index.php" target="_blank">上海Evolve集团官方网站</a></p>
+		        		<p class="itemIntro">简介：www.52retail.com项目的公司官网，承担全部html,css,js编写工作。运用技术主要有：html5，jquery，fancybox等。</p>
 		            </li>
-		            <li><a href="http://forester2.vizzhost.com/evolve/catalog/index.php">项目二地址</a></li>
-		            <li><a href="http://www.52retail.com/">项目三地址</a></li>
-		            <li><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html">项目四地址</a></li>
-		            <li><a href="http://forester2.vizzhost.com/dreamventions/html20131018/index.php ">项目五地址</a></li>
-		            <li><a href="http://forester2.vizzhost.com/max_yu/dms/index.html">项目六地址</a></li>
+		            <li>
+		            	<p><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html" target="_blank">香港浸会大学国际学院手机网站</a></p>
+		        		<p class="itemIntro">简介：香港浸会大学国际学院手机网站，主要使用jqueryMobile,html5,css3等技术开发。</p>
+		            </li>
+		            <li>
+		            	<p><a href="http://forester2.vizzhost.com/dreamventions/html20131018/index.php" target="_blank">香港Espiratione购物网站</a></p>
+		        		<p class="itemIntro">简介：E-shop类型网站，负责html,css的重构，部分js功能调试。运用技术主要有：html，css2，原生js。</p>
+		            </li>
 		        </ul>
 		    </div>
 
@@ -225,11 +208,11 @@
 		            <li>运用CSS框架——Bootstrap做过项目</li>
 		            <li>运用前端MVC框架——Backbone做过项目</li>
 		            <li>了解Angular.js 、requirejs、KISSY 等前端框架工具</li>
-		            <li>运用GIthub Pages 和Jekyll 搭建个人博客</li>
-		            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，英文原版书籍等渠道进行知识更新，快速独立解决问题。</li>
-		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
+		            <li>运用Github Pages 和Jekyll 搭建个人博客</li>
 		            <li>注重代码简洁性，可重用性，提升开发效率。</li>
-		            <li>做事方式方面，能很好的跟产品／设计／后台等同事进行合作沟通，创造一种大家都舒服的工作形式。</li>
+		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
+		            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，等渠道进行知识更新，快速独立解决问题。</li>
+		            <li>团队沟通协作方面，能很好的跟产品／设计／后台等同事进行合作沟通，创造一种大家都舒服的工作形式。</li>
 		        </ul>
 		    </div>
 
@@ -237,9 +220,8 @@
 		        <p class="title">对下一份工作的期待</p>
 		        <ul>
 		            <li>提升大型项目的驾驭能力，研究性能调优，学习模块化设计等方面的知识。</li>
-		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
-		            <li>更好的把握用户需求，让技术真正服务于产品。</li>
-		            <li>希望新工作有一定成长空间，技术上有足够挑战性，服务的产品有独特价值。</li>
+		            <li>更好的把握用户需求，让技术真正服务于产品，能够做出优秀的产品。</li>
+		            <li>希望新工作有成长空间，技术上有挑战性，技术氛围够Geek，团队够Nice，代码跑在千万用户面前的成就感。</li>
 		            <li>最后，希望我们有机会成为同事。</li>
 		        </ul>
 		    </div>
