update http state value blog

--- a/_posts/2013-06-06-http-state-value.html
+++ b/_posts/2013-06-06-http-state-value.html
@@ -11,6 +11,124 @@ title : Http协议中返回的状态码
 
 
 
+<h4>1xx-信息提示</h4>
+<p>这些状态代码表示临时的响应。客户端在收到常规响应之前，应准备接收一个或多个1xx响应。</p>
+<p>
+	<ul>
+		<li>100-继续。</li>
+		<li>101-切换协议。</li>
+	</ul>
+</p>
+
+
+
+
+<h4>2xx-成功</h4>
+<p>这类状态代码表明服务器成功地接受了客户端请求。</p>
+<p>
+	<ul>
+		<li>200-确定。客户端请求已成功。</li>
+		<li>201-已创建。</li>
+		<li>202-已接受。</li>
+		<li>203-非权威性信息。</li>
+		<li>204-无内容</li>
+		<li>205-重置内容。</li>
+		<li>206-部分内容。</li>
+	</ul>
+</p>
+
+
+
+
+
+
+<h4>3xx-重定向</h4>
+<p>客户端浏览器必须采取更多操作来实现请求。例如，浏览器可能不得不请求服务器上的不同的页面，或通过代理服务器重复该请求。</p>
+<p>
+	<ul>
+		<li>301-对象已永久移走，即永久重定向。</li>
+		<li>302-对象已临时移动。</li>
+		<li>304-未修改。</li>
+		<li>307-临时重定向。</li>
+	</ul>
+</p>
+
+
+
+
+<h4>4xx-客户端错误</h4>
+<p>发生错误，客户端似乎有问题。例如，客户端请求不存在的页面，客户端未提供有效的身份验证信息。400-错误的请求。</p>
+<p>
+	<ul>
+		<li>401-访问被拒绝。IIS定义了许多不同的401错误，它们指明更为具体的错误原因。这些具体的错误代码在浏览器中显示，但不在IIS日志中显示:</li>
+		<li>401.1-登录失败。</li>
+		<li>401.2-服务器配置导致登录失败。</li>
+		<li>401.3-由于ACL对资源的限制而未获得授权。</li>
+		<li>401.4-筛选器授权失败。</li>
+		<li>401.5-ISAPI/CGI应用程序授权失败。</li>
+		<li>401.7–访问被Web服务器上的URL授权策略拒绝。这个错误代码为IIS6.0所专用。</li>
+		<li>403-禁止访问：IIS定义了许多不同的403错误，它们指明更为具体的错误原因:</li>
+		<li>403.1-执行访问被禁止。</li>
+		<li>403.2-读访问被禁止。</li>
+		<li>403.3-写访问被禁止。</li>
+		<li>403.4-要求SSL。</li>
+		<li>403.5-要求SSL128。</li>
+		<li>403.6-IP地址被拒绝。</li>
+		<li>403.7-要求客户端证书。</li>
+		<li>403.8-站点访问被拒绝。</li>
+		<li>403.9-用户数过多。</li>
+		<li>403.10-配置无效。</li>
+		<li>403.11-密码更改。</li>
+		<li>403.12-拒绝访问映射表。</li>
+		<li>403.13-客户端证书被吊销。</li>
+		<li>403.14-拒绝目录列表。</li>
+		<li>403.15-超出客户端访问许可。</li>
+		<li>403.16-客户端证书不受信任或无效。</li>
+		<li>403.17-客户端证书已过期或尚未生效。</li>
+		<li>403.18-在当前的应用程序池中不能执行所请求的URL。这个错误代码为IIS6.0所专用。</li>
+		<li>403.19-不能为这个应用程序池中的客户端执行CGI。这个错误代码为IIS6.0所专用。</li>
+		<li>403.20-Passport登录失败。这个错误代码为IIS6.0所专用。</li>
+		<li>404-未找到。</li>
+		<li>404.0-（无）–没有找到文件或目录。</li>
+		<li>404.1-无法在所请求的端口上访问Web站点。</li>
+		<li>404.2-Web服务扩展锁定策略阻止本请求。</li>
+		<li>404.3-MIME映射策略阻止本请求。</li>
+		<li>405-用来访问本页面的HTTP谓词不被允许（方法不被允许）。</li>
+		<li>406-客户端浏览器不接受所请求页面的MIME类型。</li>
+		<li>407-要求进行代理身份验证。</li>
+		<li>412-前提条件失败。</li>
+		<li>413–请求实体太大。</li>
+		<li>414-请求URI太长。</li>
+		<li>415–不支持的媒体类型。</li>
+		<li>416–所请求的范围无法满足。</li>
+		<li>417–执行失败。</li>
+		<li>423–锁定的错误。</li>
+	</ul>
+</p>
+
+
+
+
+<h4>5xx-服务器错误</h4>
+<p>服务器由于遇到错误而不能完成该请求。</p>
+<p>
+	<ul>
+		<li>500-内部服务器错误。</li>
+		<li>500.12-应用程序正忙于在Web服务器上重新启动。</li>
+		<li>500.13-Web服务器太忙。</li>
+		<li>500.15-不允许直接请求Global.asa。</li>
+		<li>500.16–UNC授权凭据不正确。这个错误代码为IIS6.0所专用。</li>
+		<li>500.18–URL授权存储不能打开。这个错误代码为IIS6.0所专用。</li>
+		<li>500.100-内部ASP错误。</li>
+		<li>501-页眉值指定了未实现的配置。</li>
+		<li>502-Web服务器用作网关或代理服务器时收到了无效响应。</li>
+		<li>502.1-CGI应用程序超时。</li>
+		<li>502.2-CGI应用程序出错。application error。</li>
+		<li>503-服务不可用。这个错误代码为IIS6.0所专用。</li>
+		<li>504-网关超时。</li>
+		<li>505-HTTP版本不受支持。</li>
+	</ul>
+</p>
 
 
 
