modified javascript event blog

--- a/_posts/2013-02-24-javascript-event.html
+++ b/_posts/2013-02-24-javascript-event.html
@@ -10,6 +10,9 @@ title : Javascript事件原理，继承和闭包
 
 
 
+<h4>什么是事件？</h4>
+<p>事件(Event)是JavaScript应用跳动的心脏 ，也是把所有东西粘在一起的胶水。当我们与浏览器中 Web 页面进行某些类型的交互时，事件就发生了。事件可能是用户在某些内容上的点击、鼠标经过某个特定元素或按下键盘上的某些按键。事件还可能是 Web 浏览器中发生的事情，比如说某个 Web 页面加载完成，或者是用户滚动窗口或改变窗口大小。</p>
+<p>通过使用 JavaScript ，你可以监听特定事件的发生，并规定让某些事件发生以对这些事件做出响应。</p>
 
 
 
@@ -20,6 +23,8 @@ title : Javascript事件原理，继承和闭包
 
 
 
+
+<p class="pege_tail">参考<a href="http://www.cnblogs.com/binyong/articles/1750263.html" target="_blank">理解Javascript的事件处理机制</a></p>
 
 
 
