--- a/_posts/2013-04-07-jquery-ajax.html
+++ b/_posts/2013-04-07-jquery-ajax.html
@@ -61,7 +61,7 @@ $(function(){
 
 
 
-
+<p class="pege_tail">参考<a href="http://blog.csdn.net/shanderlam/article/details/3067308" target="_blank">实现AJAX的基本步骤</a></p>
 
 
 
