add baidu analytics in resume pages

--- a/resume.html
+++ b/resume.html
@@ -91,6 +91,12 @@
 	            font-size: 35px;
 	            vertical-align:middle;
 	        }
+
+
+	        /*去除百度检测图片样式*/
+			img[src="http://eiv.baidu.com/hmt/icon/21.gif"]{display:none;}
+
+
 	    </style>
 　　 </head>
 　　 <body>
@@ -241,6 +247,16 @@
 
 
 	</body>
+
+
+
+	<script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7cfeeba2e3844f06b817b0b2cb423ce9' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+
+
+
 </html>
 
 
