delete some unuseful blog

--- a/_posts/2014-04-26-jekyll-command-line.html
+++ b/_posts/2014-04-26-jekyll-command-line.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title : jekyll工具使用
+title : 使用jekyll搭建博客系统
 ---
 
 
 
 
-<h3>介绍jekyll工具使用篇章</h3>
+<h3>使用jekyll搭建博客系统</h3>
 
 
 
