delete git thanks blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -11,7 +11,7 @@ title : Html5的新特性
 
 
 
-<p>根据 <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a>	的定义，原文如下：HTML5 is the latest evolution of the standard that defines HTML.</p>
+<p>根据 <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla</a>	的定义，原文如下：HTML5 is the latest evolution of the standard that defines HTML.</p>
 <p>准确的来说：HTML5 是 HTML 标准的最新演进版本，即是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
 
 <p>通俗的理解：<strong>就是在html4标准之上添加了一些新的标签（具有属性和行为）。</strong></p>
@@ -412,7 +412,7 @@ Your browser does not support the video tag.
 
 
 
-<p class="pege_tail">参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a></p>
+<p class="pege_tail">参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla</a></p>
 
 
 
