only one page on git command blog

--- a/_posts/2013-05-24-html-engine.html
+++ b/_posts/2013-05-24-html-engine.html
@@ -78,8 +78,14 @@ title : Html页面的性能优化以及缓存处理
 
 
 
-
-
+<h4>如果需要在html页面上设置不缓存，这在head标签中加入如下语句</h4>
+<p>
+	{% highlight html %}
+	<meta http-equiv="pragma" content="no-cache">
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="0">   
+	{% endhighlight %}
+</p>
 
 
 
