--- a/_posts/2014-05-18-git-command-line.html
+++ b/_posts/2014-05-18-git-command-line.html
@@ -204,6 +204,141 @@ title : git学习速查手册
 
 
 
+<h3>Update & Publish（更新和发布）</h3>
+
+
+
+
+
+<p>List all currently configured remotes（列出所有当前的远程配置）</p>
+<p>
+	{% highlight java %}
+	$ git remote -v
+	{% endhighlight %}
+</p>
+
+
+
+<p>Show information about a remote（显示远程版本库信息）</p>
+<p>
+	{% highlight java %}
+	$ git remote show
+	{% endhighlight %}
+</p>
+
+
+
+<p>Add mew remote repository , named <remote>（增加一个新的名为<remote>的远程版本）</p>
+<p>
+	{% highlight java %}
+	$ git remote add <remote>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Download all changes from <remote> , but don't integrate into HEAD（从远程下载所有更改，但是不和本地合并）</p>
+<p>
+	{% highlight java %}
+	$ git fetch <remote>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Download changes and directly merge/integrate into HEAD （从远程下载所有更改，并且和本地合并）</p>
+<p>
+	{% highlight java %}
+	$ git pull <remote> <branch>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Publish local changes on a remote（发布本地的提交的更改去远程版本库）</p>
+<p>
+	{% highlight java %}
+	$ git push <remote> <branch>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Delete a branch on the remote（删除远程的版本库的一个分支）</p>
+<p>
+	{% highlight java %}
+	$ git push <remote> : <branch>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Publish your local all tags to remote （发布本地所有的标记去远程本版库）</p>
+<p>
+	{% highlight java %}
+	$ git push --tags
+	{% endhighlight %}
+</p>
+
+
+
+
+
+
+
+
+
+
+
+<h3>Merge & Rebase（合并，重定义）</h3>
+
+
+
+
+
+
+<p>Merge <branch> into your current HEAD（合并分支去当前版本）</p>
+<p>
+	{% highlight java %}
+	$ git merge <branch>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Rebase your current HEAD onto <branch>（重定义当前的版本）</p>
+<p>
+	{% highlight java %}
+	$ git rebase <branch>
+	{% endhighlight %}
+</p>
+
+
+
+<p>Abort a rebase（中支重定义）</p>
+<p>
+	{% highlight java %}
+	$ git rebase --abort
+	{% endhighlight %}
+</p>
+
+
+
+<p>Continue a rebase after resolving conflicts（解决冲突之后继续）</p>
+<p>
+	{% highlight java %}
+	$ git rebase --continue
+	{% endhighlight %}
+</p>
+
+
+
+<p>Changes to tracked files（本地目录追踪文件更改的比较）</p>
+<p>
+	{% highlight java %}
+	$ git diff
+	{% endhighlight %}
+</p>
 
 
 
